# DecisionTree

./: CMakeLists.txt  Dockerfile  README.md  README.txt  conanfile.txt
src/: AdultCSVReader.cpp  AdultCSVReader.h  Classify.cpp  Classify.h  CreateDecisionTree.cpp  CreateDecisionTree.h  DataSubset.h  DecisionLeaf.cpp  DecisionLeaf.h  DecisionNode.cpp  DecisionNode.h  DecisionTreePrinter.cpp  DecisionTreePrinter.h  Example.cpp  Example.h  Feature.cpp  Feature.h  Leaf.h  Question.cpp  Question.h  main.cpp
tests/: AdultCSVReaderTest.cpp  DecisionTreeTest.cpp
